--- a/app/src/main/res/layout/buy_inputs_dialog_input.xml
+++ b/app/src/main/res/layout/buy_inputs_dialog_input.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center_vertical"
     android:orientation="vertical"
-    android:background="@color/white">
+    android:background="#F5F6F8">
 
 
     <LinearLayout
+        android:id="@+id/myToolbar"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="@color/colorAccentGreen">
 
         <ImageView
@@ -21,44 +22,70 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/dialog_title"
-            android:layout_width="wrap_content"
+
+        <ImageView
+            android:gravity="center"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/product_title"
-            android:textColor="@color/white"
-            android:textSize="20sp"
-            android:layout_marginStart="6dp"
-            android:textStyle="bold"
-            android:layout_marginLeft="6dp" />
+            android:layout_marginBottom="110dp"
+            android:src="@drawable/ic_logo"/>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:padding="16dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/myToolbar"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="-90dp"
+        android:layout_marginStart="@dimen/dimen_10dp"
+        android:layout_marginEnd="@dimen/dimen_10dp"
+        android:background="@drawable/background_custom_dialog"
         android:gravity="center"
-        android:orientation="vertical" >
+        android:orientation="vertical"
+        android:padding="10dp">
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/josefin_sans"
+            android:text="@string/sign_up"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="39dp"
+            android:layout_height="5dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="12dp"
+            android:background="@drawable/rounded_corners_button" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_marginTop="4dp"
+            android:background="@color/light_gray" />
 
         <TextView
             android:id="@+id/forgot_password_text"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:clickable="true"
             android:focusable="true"
             android:text="@string/forgot_title"
             android:textColor="@color/textColorSecondaryLight"
             android:textSize="16sp"
-            android:textStyle="normal" />
+            android:textStyle="normal"
+            android:visibility="gone" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fragment_title_padding_10"
-            android:background="@drawable/rounded_corners_edittext_white"
+            android:layout_margin="@dimen/fragment_title_padding_10"
+            android:background="@drawable/edittext_corner"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -72,7 +99,7 @@
                     android:layout_height="30dip"
                     android:layout_centerVertical="true"
                     android:padding="5dp"
-                    android:src="@drawable/ic_email"></ImageView>
+                    android:src="@drawable/ic_email"/>
 
                 <EditText
                     android:id="@+id/dialog_input"
@@ -96,30 +123,31 @@
         </LinearLayout>
 
         <FrameLayout
-            android:layout_below="@id/dialog_input"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dip"
+            android:layout_below="@id/dialog_input"
+            android:layout_margin="10dip"
             android:background="@drawable/rounded_corners_button">
+
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/dialog_button"
                 android:layout_width="match_parent"
                 android:layout_height="40dip"
-                android:background="@color/transparent"
                 android:layout_gravity="center_vertical"
-                android:text="@string/sendemail"
                 android:layout_weight="1"
+                android:background="@color/transparent"
+                android:text="@string/sendemail"
                 android:textAllCaps="false"
                 android:textColor="@color/white"
-                android:textSize="@dimen/button_text_size"
-                />
+                android:textSize="@dimen/button_text_size" />
+
             <ImageView
                 android:layout_width="30dip"
                 android:layout_height="30dip"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:layout_margin="10dip"
                 android:layout_gravity="right|center_vertical"
+                android:layout_margin="10dip"
                 android:src="@drawable/ic_right_arrow">
 
             </ImageView>
@@ -130,4 +158,4 @@
     </LinearLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
