--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,139 +7,132 @@
     android:orientation="vertical"
     android:background="@color/windowBackgroundLight">
 
-    <include
-        android:id="@+id/myToolbar"
-        layout="@layout/toolbar" />
+
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:isScrollContainer="true"
-        android:scrollbars="none"
-        android:layout_below="@+id/myToolbar">
+        android:scrollbars="none">
 
-        <LinearLayout
+
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
-            android:orientation="vertical"
-            android:padding="20dp">
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:id="@+id/layout_logo"
+                android:layout_width="match_parent"
+                android:layout_height="275dp"
+                android:background="@color/colorPrimary">
+
+            </RelativeLayout>
 
             <ImageView
-                android:id="@+id/logoImg"
-                android:layout_width="140dp"
-                android:layout_height="140dp"
-                android:scaleType="fitXY"
-                android:visibility="gone"
-                android:src="@drawable/profile"
-                />
-            <FrameLayout
+                android:id="@+id/logo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_logo"
+                android:layout_margin="20dp"
+                android:layout_centerHorizontal="true"/>
+            <LinearLayout
+                android:id="@+id/login_form_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp" >
-                <TextView
-
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_gravity="left|center_vertical"
-                    android:text="@string/login"
-                    android:textColor="@color/textColorPrimary"
-                    android:textSize="19sp"
-
-                    />
+                android:orientation="vertical"
+                android:gravity="center_horizontal"
+                android:layout_below="@id/logo"
+                android:layout_margin="15dp"
+                android:background="@drawable/background_custom_dialog">
 
                 <TextView
-                    android:id="@+id/forgot_password_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_gravity="right|center_vertical"
-                    android:text="@string/forgot_your_password"
-                    android:textColor="@color/colorAccentGrey"
-                    android:textSize="19sp"
+                    android:layout_marginTop="25dp"
+                    android:text="@string/welcome_please_login_to_your_account"
+                    android:textColor="@color/colorPrimary"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
-                    />
+                <View
+                    android:layout_width="39dp"
+                    android:layout_height="5dp"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_margin="24dp"
+                    android:background="@drawable/rounded_corners_button" />
 
-            </FrameLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:background="@color/light_gray"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginEnd="4dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="25dp"
+                    android:text="@string/welcome_please_login_to_your_account"
+                    android:textColor="#AEAEAE"
+                    android:textSize="14sp" />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
+                android:layout_margin="20dp"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/rounded_corners_edittext_white"
-                    android:orientation="vertical">
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="20dp">
 
-                    <RelativeLayout
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dip">
+                        android:text="@string/email_address"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="4dp"/>
+                    <EditText
+                        android:id="@+id/user_email"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
+                        android:textSize="14sp"
+                        android:inputType="textEmailAddress|textNoSuggestions"/>
 
-                        <ImageView
-                            android:id="@+id/iv_profile"
-                            android:layout_width="30dip"
-                            android:layout_height="30dip"
-                            android:layout_centerVertical="true"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_profile"/>
+                </LinearLayout>
 
-                        <EditText
-                            android:id="@+id/user_email"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/input_field_height"
-                            android:layout_toRightOf="@id/iv_profile"
-                            android:background="@drawable/rounded_corners_edittext_white"
-                            android:drawablePadding="15dp"
-                            android:gravity="start|center_vertical"
-                            android:hint="@string/email_address"
-                            android:inputType="textEmailAddress|textNoSuggestions"
-                            android:paddingStart="15dp"
-                            android:paddingEnd="15dp"
-                            android:textAlignment="viewStart"
-                            android:textColor="@color/textColorSecondary"
-                            android:textColorHint="@color/textColorPrimaryDark" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_marginBottom="20dp">
 
-                    </RelativeLayout>
-
-                    <RelativeLayout
+                    <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:padding="10dip">
+                        android:text="@string/password"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="4dp"/>
+                    <EditText
+                        android:id="@+id/user_password"
+                        android:layout_width="match_parent"
+                        android:layout_height="50dp"
+                        android:paddingStart="@dimen/dimen_10dp"
+                        android:background="@drawable/edittext_corner"
+                        android:textSize="14sp"
+                        android:inputType="textPassword|textNoSuggestions"/>
 
-                        <ImageView
-                            android:id="@+id/iv_password"
-                            android:layout_width="30dip"
-                            android:layout_height="30dip"
-                            android:layout_centerVertical="true"
-                            android:padding="5dp"
-                            android:src="@drawable/ic_password"/>
-
-                        <EditText
-                            android:id="@+id/user_password"
-                            android:layout_width="match_parent"
-                            android:layout_height="@dimen/input_field_height"
-                            android:layout_marginTop="@dimen/input_field_margin"
-                            android:background="@drawable/rounded_corners_edittext_white"
-                            android:layout_toRightOf="@id/iv_password"
-                            android:drawablePadding="15dp"
-                            android:gravity="start|center_vertical"
-                            android:hint="@string/password"
-                            android:inputType="textPassword|textNoSuggestions"
-                            android:paddingStart="15dp"
-                            android:paddingEnd="15dp"
-                            android:password="true"
-                            android:textAlignment="viewStart"
-                            android:textColor="@color/textColorSecondary"
-                            android:textColorHint="@color/textColorPrimaryDark" />
-                    </RelativeLayout>
                 </LinearLayout>
 
                 <FrameLayout
@@ -155,7 +148,7 @@
                         android:layout_gravity="center_vertical"
                         android:text="@string/login"
                         android:layout_weight="1"
-                        android:textAllCaps="false"
+                        android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/button_text_size"
                         />
@@ -172,7 +165,25 @@
 
                 </FrameLayout>
 
+                <FrameLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp" >
 
+
+                    <TextView
+                        android:id="@+id/forgot_password_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:clickable="true"
+                        android:focusable="true"
+                        android:layout_gravity="center_horizontal"
+                        android:text="@string/forgot_pass"
+                        android:textColor="@color/colorAccentGrey"
+                        android:textSize="16sp"
+                        android:textStyle="italic"/>
+
+                </FrameLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -241,44 +252,37 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:gravity="center"
-                    android:layout_margin="10dp">
-
-                    <TextView
-                        android:id="@+id/login_signupText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:text="@string/not_a_member"
-                        android:textColor="@color/textColorSecondaryLight"
-                        android:textSize="16sp"
-                        android:textStyle="normal" />
-
-                    <TextView
-
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:clickable="true"
-                        android:focusable="true"
-                        android:visibility="gone"
-                        android:text="@string/signup"
-                        android:textColor="@color/colorAccentGreen"
-                        android:textSize="18sp"
-                        android:textStyle="bold"
-                        android:layout_marginStart="5dp"
-                        android:layout_marginLeft="5dp" />
-
-                </LinearLayout>
 
 
             </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/login_form_layout"
+                android:gravity="center"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/don_t_have_an_account_yet"
+                    android:textColor="#515C6F"
+                    android:layout_margin="5dp"/>
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/login_signupText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="@string/create_a_new_account"
+                    android:textColor="@color/colorPrimary"
+                    android:textStyle="bold"
+                    android:clickable="true"
+                    android:focusable="true" />
+
+            </LinearLayout>
+        </RelativeLayout>
     </ScrollView>
 
 </RelativeLayout>
