--- a/app/src/main/res/layout/fragment_livestock_records.xml
+++ b/app/src/main/res/layout/fragment_livestock_records.xml
@@ -109,11 +109,11 @@
                         android:paddingBottom="5dp">
 
                         <ImageView
-                            android:layout_width="160dp"
-                            android:layout_height="90dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="115dp"
                             android:layout_gravity="center"
                             android:padding="20dp"
-                            android:src="@drawable/gender_matings" />
+                            android:src="@drawable/ic_gender2" />
 
                         <TextView
                             android:id="@+id/tv_matings"
@@ -151,11 +151,11 @@
                         android:paddingBottom="5dp">
 
                         <ImageView
-                            android:layout_width="160dp"
+                            android:layout_width="match_parent"
                             android:layout_height="90dp"
                             android:layout_gravity="center"
                             android:padding="20dp"
-                            android:src="@drawable/litters" />
+                            android:src="@drawable/ic_birthday_cake" />
 
                         <TextView
                             android:layout_width="match_parent"
