--- a/app/src/main/res/layout/litters_list_item.xml
+++ b/app/src/main/res/layout/litters_list_item.xml
@@ -17,7 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="2:.8"
+            app:layout_constraintDimensionRatio="2:1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -92,7 +92,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.78" />
+                app:layout_constraintGuide_percent="0.79" />
 
             <TextView
                 android:id="@+id/textView8"
@@ -288,22 +288,33 @@
                 app:layout_constraintEnd_toStartOf="@+id/guideline30"
                 app:layout_constraintStart_toStartOf="@+id/guideline37"
                 app:layout_constraintTop_toTopOf="@+id/guideline34" />
-
             <com.myfarmnow.myfarmcrop.customs.CircularImageView
-                android:id="@+id/litter_item_image"
+                android:id="@+id/litter_item_male_image"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:layout_margin="12dp"
+                android:layout_margin="8dp"
+                android:src="@drawable/ic_animal_group"
+                app:layout_constraintBottom_toTopOf="@+id/guideline35"
+                app:layout_constraintDimensionRatio="1:1"
+                app:layout_constraintEnd_toStartOf="@id/litter_item_female_image"
+                app:layout_constraintStart_toStartOf="@+id/guideline30"
+                app:layout_constraintTop_toTopOf="@+id/guideline31" />
+
+            <com.myfarmnow.myfarmcrop.customs.CircularImageView
+                android:id="@+id/litter_item_female_image"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_margin="8dp"
                 android:src="@drawable/ic_animal_group"
                 app:layout_constraintBottom_toTopOf="@+id/guideline35"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@+id/guideline30"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintStart_toEndOf="@id/litter_item_male_image"
+                app:layout_constraintTop_toTopOf="@+id/guideline31" />
             <ImageView
                 android:id="@+id/litter_item_more"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
                 android:backgroundTint="@color/black"
                 android:textColor="@color/darker_gray"
                 android:src="@drawable/ic_baseline_more_vert"
@@ -311,7 +322,6 @@
                 android:padding="@dimen/dimen_5dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline31"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/litter_item_image"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
