--- a/app/src/main/res/layout/litters_list_item.xml
+++ b/app/src/main/res/layout/litters_list_item.xml
@@ -300,15 +300,17 @@
                 app:layout_constraintStart_toStartOf="@+id/guideline30"
                 app:layout_constraintTop_toTopOf="@+id/guideline31" />
 
+
+
             <com.myfarmnow.myfarmcrop.customs.CircularImageView
                 android:id="@+id/litter_item_female_image"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="8dp"
-                android:src="@drawable/ic_bull_silhouette_svg"
-                app:layout_constraintBottom_toTopOf="@+id/guideline35"
+                android:src="@drawable/ic_group_1"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/guideline35"
                 app:layout_constraintStart_toEndOf="@id/litter_item_male_image"
                 app:layout_constraintTop_toTopOf="@+id/guideline31" />
             <ImageView
