--- a/app/src/main/res/layout/buy_inputs_address.xml
+++ b/app/src/main/res/layout/buy_inputs_address.xml
@@ -76,7 +76,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:layout_marginBottom="40dp"
+                android:layout_marginBottom="50dp"
                 android:gravity="center"
                 android:orientation="vertical">
 
@@ -113,8 +113,8 @@
                     android:id="@+id/imageMarker"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_15"
-                    app:srcCompat="@drawable/ic_pin"
+                    android:layout_marginTop="@dimen/dimen_5dp"
+                    app:srcCompat="@drawable/ic_pin_location"
                     tools:ignore="VectorDrawableCompat" />
 
             </LinearLayout>
