--- a/app/src/main/res/layout/fragment_wallet_home.xml
+++ b/app/src/main/res/layout/fragment_wallet_home.xml
@@ -290,12 +290,30 @@
                 </LinearLayout>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/quick_actions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/layout2"
+                app:layout_constraintBottom_toTopOf="@id/layout3"
+                android:layout_margin="10dp"
+                android:paddingStart="4dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Quick Actions"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:textColor="@color/black"/>
+            </LinearLayout>
+            <LinearLayout
                 android:id="@+id/layout3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginTop="20dp"
-                app:layout_constraintTop_toBottomOf="@id/layout2"
+                android:layout_marginTop="10dp"
+                app:layout_constraintTop_toBottomOf="@id/quick_actions"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent">
 
